Update: styles for edit tab

--- a/TheAGEnt.Core/Assets/css/site.css
+++ b/TheAGEnt.Core/Assets/css/site.css
@@ -1,4 +1,4 @@
-.Registration, .Login {
+.Registration, .Login, .Edit {
     display: flex;
     justify-content: center;
     flex-direction: column;
