Update: app styles

--- a/TheAGEnt.Core/Assets/css/site.css
+++ b/TheAGEnt.Core/Assets/css/site.css
@@ -1,4 +1,4 @@
-.Registration, .Login, .Edit {
+.Registration, .Login, .UploadCard, .UploadAvatar , .Edit {
     display: flex;
     justify-content: center;
     flex-direction: column;
