--- a/TheAGEnt.Core/Assets/css/site.css
+++ b/TheAGEnt.Core/Assets/css/site.css
@@ -4,3 +4,20 @@
     flex-direction: column;
     align-items: center;
 }
+
+.Full-Image {
+    height: auto;
+    width: 50em;
+}
+
+.container-with-comments {
+    display: flex;
+}
+
+.Message-from-user {
+    box-shadow: 0px 0px 15px cyan;
+}
+
+.Comment-box {
+    margin: 30px;
+}
